--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "todotable",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "tsc": "tsc",
-    "build": "webpack --mode=production",
-    "start": "webpack serve --mode=development"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.8.1",
-    "@typescript-eslint/parser": "^5.8.1",
-    "autoprefixer": "^10.4.1",
-    "css-loader": "^6.5.1",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "^8.3.0",
-    "html-webpack-plugin": "^5.5.0",
-    "postcss-loader": "^6.2.1",
-    "prettier": "^2.5.1",
-    "sass": "^1.45.1",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.3.1",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2"
-  }
+	"name": "todo-table",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"tsc": "tsc",
+		"build": "webpack --mode=production",
+		"start": "webpack serve --mode=development"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.8.1",
+		"@typescript-eslint/parser": "^5.8.1",
+		"autoprefixer": "^10.4.1",
+		"css-loader": "^6.5.1",
+		"eslint": "^8.5.0",
+		"eslint-config-prettier": "^8.3.0",
+		"html-webpack-plugin": "^5.5.0",
+		"postcss-loader": "^6.2.1",
+		"prettier": "^2.5.1",
+		"sass": "^1.45.1",
+		"sass-loader": "^12.4.0",
+		"style-loader": "^3.3.1",
+		"ts-loader": "^9.2.6",
+		"typescript": "^4.5.4",
+		"webpack": "^5.65.0",
+		"webpack-cli": "^4.9.1",
+		"webpack-dev-server": "^4.7.2"
+	}
 }
