--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"webpack": "^5.65.0",
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.7.2"
+	},
+	"dependencies": {
+		"chart.js": "^3.7.0"
 	}
 }
