--- a/package.json
+++ b/package.json
@@ -30,7 +30,5 @@
 		"webpack-cli": "^4.9.1",
 		"webpack-dev-server": "^4.7.2"
 	},
-	"dependencies": {
-		"chart.js": "^3.7.0"
-	}
+	"dependencies": {}
 }
