--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
 		"sass": "^1.45.1",
 		"sass-loader": "^12.4.0",
 		"style-loader": "^3.3.1",
+		"stylelint": "^14.2.0",
+		"stylelint-config-prettier": "^9.0.3",
+		"stylelint-config-recess-order": "^3.0.0",
+		"stylelint-config-recommended-scss": "^5.0.2",
+		"stylelint-scss": "^4.1.0",
 		"ts-loader": "^9.2.6",
 		"typescript": "^4.5.4",
 		"webpack": "^5.65.0",
