--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"tsc": "tsc",
+		"mock": "json-server --watch data/todo.json",
 		"build": "webpack --mode=production",
-		"start": "webpack serve --mode=development"
+		"dev": "webpack serve --mode=development & npm run mock",
+		"start": "npm run build"
 	},
 	"keywords": [],
 	"author": "",
@@ -19,6 +21,7 @@
 		"eslint": "^8.5.0",
 		"eslint-config-prettier": "^8.3.0",
 		"html-webpack-plugin": "^5.5.0",
+		"json-server": "^0.17.0",
 		"postcss-loader": "^6.2.1",
 		"prettier": "^2.5.1",
 		"sass": "^1.45.1",
